--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,13 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
 
+header_pages:
+  - gallery.md
+  - about.md
+
+show_excerpts: true
+excerpt_separator: <!--more-->
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
